--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1> The Police </h1>
         <img src="img/thep.jpg">
-
+        <img src="img/thep2.jpg">
         <p><b>I The Police</b> sono un gruppo musicale che si è formato a <i>Londra nel 1977</i></p>
 
         <h2> Membri del gruppo: </h2>
